<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/launch_about_activity"
            android:checkable="false"
            android:onClick="launchAboutActivity"
            android:title="@string/launch_about_activity" />
        <item
            android:id="@+id/play_meeting_wav"
            android:checkable="false"
            android:onClick="replayMeeting"
            android:title="@string/play_meeting_wav" />
        <item
            android:id="@+id/show_splash"
            android:checkable="false"
            android:onClick="launchMainActivity"
            android:title="@string/launch_main_activity" />
        <item
            android:id="@+id/use_test_server"
            android:title="@string/use_test_server"
            app:actionLayout="@layout/widget_check" />
    </group>
    <item android:title="@string/diarizer_menu_label" />
    <group
        android:id="@+id/menu_diarizers"
        android:checkableBehavior="single">
        <item
            android:id="@+id/diarizer_aalto"
            android:title="@string/diarizer_aalto" />
        <item
            android:id="@+id/diarizer_ibm"
            android:title="@string/ibm" />
    </group>
    <item android:title="@string/transcriber_menu_label" />
    <group
        android:id="@+id/menu_transcribers"
        android:checkableBehavior="single">
        <item
            android:id="@+id/transcriber_null"
            android:title="@string/transcriber_null" />
        <item
            android:id="@+id/transcriber_cmu"
            android:title="@string/transcriber_cmu" />
        <item
            android:id="@+id/transcriber_ibm"
            android:title="@string/ibm" />
    </group>
</menu>